--- a/modulo06/aula04/Demo1/Demo1.Insfraestrutura/Demo1.Insfraestrutura.csproj
+++ b/modulo06/aula04/Demo1/Demo1.Insfraestrutura/Demo1.Insfraestrutura.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorio\IPedidoRepositorio.cs" />
+    <Compile Include="Repositorio\PedidoRepositorio.cs" />
     <Compile Include="Repositorio\ProdutoRepositorio.cs" />
   </ItemGroup>
   <ItemGroup>
