feat(modulo06exercicioPedidos): implementar criar , listar

--- a/modulo06/aula04/Demo1/Demo1.Dominio/Demo1.Dominio.csproj
+++ b/modulo06/aula04/Demo1/Demo1.Dominio/Demo1.Dominio.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="entidades\ItemPedido.cs" />
+    <Compile Include="entidades\Pedido.cs" />
     <Compile Include="entidades\Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
