--- a/modulo06/aula05/EditoraCrescer/EditoraCrescer.api/EditoraCrescer.api.csproj
+++ b/modulo06/aula05/EditoraCrescer/EditoraCrescer.api/EditoraCrescer.api.csproj
@@ -135,6 +135,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\AutenticacaoBasic.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -142,6 +143,7 @@
     <Compile Include="Controllers\AutorController.cs" />
     <Compile Include="Controllers\LivrosController.cs" />
     <Compile Include="Controllers\RevisorController.cs" />
+    <Compile Include="Controllers\TesteController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
