--- a/modulo06/TrabalhoLocacao/BackEnd/Locadora.infraestrutura/Locadora.infraestrutura/App.config
+++ b/modulo06/TrabalhoLocacao/BackEnd/Locadora.infraestrutura/Locadora.infraestrutura/App.config
@@ -4,11 +4,14 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="ConectionString" connectionString="Server=191.232.191.228;User Id=rafael.barreto;Password=123456;Database=aluno13db" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
-      </parameters>
+      </parameters>      
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
