feat(modulo06TrabalhoFestaLocacao): adicionar autenticacao no backend

--- a/modulo06/TrabalhoLocacao/BackEnd/Locadora.api/Locadora.api/Locadora.api.csproj
+++ b/modulo06/TrabalhoLocacao/BackEnd/Locadora.api/Locadora.api/Locadora.api.csproj
@@ -96,9 +96,12 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\BasicAuthorizationAttribute.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\BasicaController.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\LocacaoController.cs" />
+    <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
